{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 724,
  "lineage": "56da60a8-5b49-a3e6-beb8-59eed3fa86c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:security-group/sg-01bae65abf814d8a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01bae65abf814d8a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "for-ssh",
            "name_prefix": "",
            "owner_id": "114002956214",
            "revoke_rules_on_delete": false,
            "tags": {
              "origin_of_birth": "terraform"
            },
            "tags_all": {
              "origin_of_birth": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:security-group/sg-00a1e90477fcfd6a9",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-00a1e90477fcfd6a9",
            "ingress": [],
            "name": "Demo-eks-cluster-2022112222173151340000000c",
            "name_prefix": "Demo-eks-cluster-",
            "owner_id": "114002956214",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Demo-eks-cluster",
              "origin_of_birth": "terraform"
            },
            "tags_all": {
              "Name": "Demo-eks-cluster",
              "origin_of_birth": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:security-group/sg-0c0ba42a91ac17a4e",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0c0ba42a91ac17a4e",
            "ingress": [],
            "name": "Demo-eks-node-2022112222173099630000000b",
            "name_prefix": "Demo-eks-node-",
            "owner_id": "114002956214",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Demo-eks-node",
              "kubernetes.io/cluster/Demo-eks": "owned",
              "origin_of_birth": "terraform"
            },
            "tags_all": {
              "Name": "Demo-eks-node",
              "kubernetes.io/cluster/Demo-eks": "owned",
              "origin_of_birth": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3063731140",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00a1e90477fcfd6a9",
            "security_group_rule_id": "sgr-03a57018f0376b890",
            "self": false,
            "source_security_group_id": "sg-0c0ba42a91ac17a4e",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1471900549",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00a1e90477fcfd6a9",
            "security_group_rule_id": "sgr-0f6cbc322cb7e396e",
            "self": false,
            "source_security_group_id": "sg-0c0ba42a91ac17a4e",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3478450040",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00a1e90477fcfd6a9",
            "security_group_rule_id": "sgr-005d595b02cffc35c",
            "self": false,
            "source_security_group_id": "sg-0c0ba42a91ac17a4e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-83833607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0ba42a91ac17a4e",
            "security_group_rule_id": "sgr-028089a24719df6a9",
            "self": false,
            "source_security_group_id": "sg-00a1e90477fcfd6a9",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-3431728992",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0ba42a91ac17a4e",
            "security_group_rule_id": "sgr-0c9cc374105b8f70b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-324156030",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0ba42a91ac17a4e",
            "security_group_rule_id": "sgr-02be27ca0602fda2a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-1842093939",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0c0ba42a91ac17a4e",
            "security_group_rule_id": "sgr-0601218cbfa7c36d8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2339983118",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0ba42a91ac17a4e",
            "security_group_rule_id": "sgr-00f79dad8c9cb9e9d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-85904744",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0c0ba42a91ac17a4e",
            "security_group_rule_id": "sgr-0e7b616687e7ab366",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2920962472",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0ba42a91ac17a4e",
            "security_group_rule_id": "sgr-06fbbba8ebd66283a",
            "self": false,
            "source_security_group_id": "sg-00a1e90477fcfd6a9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1788464463",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0ba42a91ac17a4e",
            "security_group_rule_id": "sgr-0afe2d0f337b74477",
            "self": false,
            "source_security_group_id": "sg-00a1e90477fcfd6a9",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3034063178",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0ba42a91ac17a4e",
            "security_group_rule_id": "sgr-0168bb68dcdd1ebbc",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-277316261",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0c0ba42a91ac17a4e",
            "security_group_rule_id": "sgr-016632a3d8ac0a104",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"blue\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:security-group/sg-0edc47b1e1e9f6007",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0edc47b1e1e9f6007",
            "ingress": [],
            "name": "blue-eks-node-group-20221122221750545400000015",
            "name_prefix": "blue-eks-node-group-",
            "owner_id": "114002956214",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blue-eks-node-group",
              "origin_of_birth": "terraform"
            },
            "tags_all": {
              "Name": "blue-eks-node-group",
              "origin_of_birth": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.for_ssh",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"green\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:security-group/sg-0a0c222b99fc299d1",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0a0c222b99fc299d1",
            "ingress": [],
            "name": "green-eks-node-group-20221122221750544900000012",
            "name_prefix": "green-eks-node-group-",
            "owner_id": "114002956214",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "green-eks-node-group",
              "origin_of_birth": "terraform"
            },
            "tags_all": {
              "Name": "green-eks-node-group",
              "origin_of_birth": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.for_ssh",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_managed_node_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:security-group/sg-0a2f77fac657230d2",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0a2f77fac657230d2",
            "ingress": [],
            "name": "eks-managed-node-group-eks-node-group-2022112222173151360000000d",
            "name_prefix": "eks-managed-node-group-eks-node-group-",
            "owner_id": "114002956214",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-managed-node-group-eks-node-group",
              "Separate": "eks-managed-node-group",
              "origin_of_birth": "terraform"
            },
            "tags_all": {
              "Name": "eks-managed-node-group-eks-node-group",
              "Separate": "eks-managed-node-group",
              "origin_of_birth": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05532e957ab42f5f6",
            "domain": "vpc",
            "id": "eipalloc-05532e957ab42f5f6",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-72-119-45.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.72.119.45",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-vpc-eu-central-1a",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-eu-central-1a",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:internet-gateway/igw-0ba80225dab4823c4",
            "id": "igw-0ba80225dab4823c4",
            "owner_id": "114002956214",
            "tags": {
              "Name": "eks-vpc",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05532e957ab42f5f6",
            "connectivity_type": "public",
            "id": "nat-06a49986b078df888",
            "network_interface_id": "eni-0d3b9f29a747fc1b3",
            "private_ip": "10.0.4.216",
            "public_ip": "3.72.119.45",
            "subnet_id": "subnet-0400dc4f64ea9c8a5",
            "tags": {
              "Name": "eks-vpc-eu-central-1a",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-eu-central-1a",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08c9ed21d395ec3251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06a49986b078df888",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08c9ed21d395ec325",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ba80225dab4823c4",
            "id": "r-rtb-0a4dd478f1e565b441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a4dd478f1e565b44",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:route-table/rtb-04904162c54bef90d",
            "id": "rtb-04904162c54bef90d",
            "owner_id": "114002956214",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-vpc-intra",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-intra",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "timeouts": null,
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:route-table/rtb-08c9ed21d395ec325",
            "id": "rtb-08c9ed21d395ec325",
            "owner_id": "114002956214",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-vpc-private",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-private",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "timeouts": null,
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:route-table/rtb-0a4dd478f1e565b44",
            "id": "rtb-0a4dd478f1e565b44",
            "owner_id": "114002956214",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-vpc-public",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-public",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "timeouts": null,
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069a263cff87790a2",
            "route_table_id": "rtb-04904162c54bef90d",
            "subnet_id": "subnet-04aa3828aacb0d2ce"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041474f0dceaf824f",
            "route_table_id": "rtb-04904162c54bef90d",
            "subnet_id": "subnet-04fcd33857411a774"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaf6acad616c6302",
            "route_table_id": "rtb-04904162c54bef90d",
            "subnet_id": "subnet-0df1af1d131056880"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4eedd770f9aa874",
            "route_table_id": "rtb-08c9ed21d395ec325",
            "subnet_id": "subnet-0463d908c61b041fe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0836e0f9c2523963a",
            "route_table_id": "rtb-08c9ed21d395ec325",
            "subnet_id": "subnet-0c8c7826c168f744b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8f44171919c5e71",
            "route_table_id": "rtb-08c9ed21d395ec325",
            "subnet_id": "subnet-063f0e65928f6a2a7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022b13da059912c76",
            "route_table_id": "rtb-0a4dd478f1e565b44",
            "subnet_id": "subnet-0400dc4f64ea9c8a5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfc92990b8851a3e",
            "route_table_id": "rtb-0a4dd478f1e565b44",
            "subnet_id": "subnet-09d2442ce2971ac55"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0156736e29a89f1cc",
            "route_table_id": "rtb-0a4dd478f1e565b44",
            "subnet_id": "subnet-05c411671a07b45db"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:subnet/subnet-04aa3828aacb0d2ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.7.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04aa3828aacb0d2ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114002956214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-intra-eu-central-1a",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-intra-eu-central-1a",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:subnet/subnet-04fcd33857411a774",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.7.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fcd33857411a774",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114002956214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-intra-eu-central-1b",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-intra-eu-central-1b",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:subnet/subnet-0df1af1d131056880",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.7.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df1af1d131056880",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114002956214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-intra-eu-central-1c",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-intra-eu-central-1c",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:subnet/subnet-0463d908c61b041fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0463d908c61b041fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114002956214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-private-eu-central-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-private-eu-central-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:subnet/subnet-0c8c7826c168f744b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8c7826c168f744b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114002956214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-private-eu-central-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-private-eu-central-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:subnet/subnet-063f0e65928f6a2a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063f0e65928f6a2a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114002956214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-private-eu-central-1c",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-private-eu-central-1c",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:subnet/subnet-0400dc4f64ea9c8a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0400dc4f64ea9c8a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "114002956214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-public-eu-central-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-public-eu-central-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:subnet/subnet-09d2442ce2971ac55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d2442ce2971ac55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "114002956214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-public-eu-central-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-public-eu-central-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:subnet/subnet-05c411671a07b45db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c411671a07b45db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "114002956214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-vpc-public-eu-central-1c",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc-public-eu-central-1c",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "vpc_id": "vpc-084c3e37cabc926fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114002956214:vpc/vpc-084c3e37cabc926fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0169e085bb39660bb",
            "default_route_table_id": "rtb-0854de1df5aa9d5cc",
            "default_security_group_id": "sg-036ed10b289edc8f7",
            "dhcp_options_id": "dopt-0a45b20d92d6f1375",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084c3e37cabc926fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0854de1df5aa9d5cc",
            "owner_id": "114002956214",
            "tags": {
              "Name": "eks-vpc",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            },
            "tags_all": {
              "Name": "eks-vpc",
              "origin_of_birth": "terraform",
              "tool": "EKS"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}